--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Weather Project</title>
+        <title>Weather App</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>Hello There</h1>
-        
-        <script src="" async defer></script>
+        <h1>Weather</h1>
+        <form action="/" method="post">
+            <label for="cityInput">City Name: </label>
+            <input id="cityInput type="text" name="cityName">
+            <button type="submit">Go</button>
+        </form>
+
+    <script src="" async defer></script>
     </body>
 </html>
