Final touches to the Project

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body>
-        <h1>Weather</h1>
+    <body style="background-color: cadetblue; color: rgb(255, 255, 255); font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">
+        <h1 style="margin-left: 5rem;">Weather</h1>
+        <h3></h3>
         <form action="/" method="post">
             <label for="cityInput">City Name: </label>
             <input id="cityInput type="text" name="cityName">
